style: format code and improve error messages in CLI script
- Updated the CLI script to use consistent formatting and improved error messages for better clarity.
- Added devDependencies for linting and formatting tools in package.json.
- Made minor adjustments to

--- a/package.json
+++ b/package.json
@@ -39,5 +39,9 @@
     "html",
     "css",
     "javascript"
-  ]
+  ],
+  "devDependencies": {
+    "lint-staged": "^16.2.6",
+    "prettier": "^3.6.2"
+  }
 }
