--- a/.release-it.json
+++ b/.release-it.json
@@ -8,7 +8,7 @@
   "github": {
     "release": true,
     "releaseName": "v${version}",
-    "releaseNotes": "git log --no-merges --pretty=format:\"* %s %h\" ${latestTag}...main | grep -v 'release v[0-9]\\{1,3\\}\\.[0-9]\\{1,3\\}\\.[0-9]\\{1,3\\}'\n"
+    "releaseNotes": "if [ -n \"${latestTag}\" ] && [ \"${latestTag}\" != \"null\" ]; then git log --no-merges --pretty=format:\"* %s %h\" ${latestTag}...main | grep -v 'release v[0-9]\\{1,3\\}\\.[0-9]\\{1,3\\}\\.[0-9]\\{1,3\\}'; else git log --no-merges --pretty=format:\"* %s %h\" | head -20 | grep -v 'release v[0-9]\\{1,3\\}\\.[0-9]\\{1,3\\}\\.[0-9]\\{1,3\\}'; fi"
   },
   "npm": {
     "publishArgs": ["--provenance"]
